# snap-buckling-knots

./: .gitignore  CMakeLists.txt  README.md  option.txt  simDER
knot_configurations/: extracConfig.m
src/: collision.cpp  collision.h  elasticRod.cpp  elasticRod.h  elasticStretchingForce.cpp  externalGravityForce.cpp  main.cpp  makefile  option.txt  setInput.cpp  setInput.h  timeStepper.cpp  timeStepper.h  world.cpp  world.h
